@@ -4,6 +4,7 @@ import android.app.Activity
 import android.content.Intent
 import android.os.Bundle
 import android.preference.PreferenceManager
+import android.view.View
 import androidx.annotation.StyleRes
 import androidx.core.content.edit
 import androidx.core.os.bundleOf
@@ -79,6 +80,16 @@ class PreferencesActivity : DaggerAppCompatActivity(),
             startActivity(Intent(this, this::class.java),
                     bundleOf(EXTRA_NEED_TO_RECREATE to true)
             )
+        }
+    }
+
+    override fun onWindowFocusChanged(hasFocus: Boolean) {
+        super.onWindowFocusChanged(hasFocus)
+        if (hasFocus && AppTheme.isImmersiveMode()){
+            window.decorView.systemUiVisibility = window.decorView.systemUiVisibility or
+                    View.SYSTEM_UI_FLAG_HIDE_NAVIGATION or
+                    View.SYSTEM_UI_FLAG_LAYOUT_HIDE_NAVIGATION or
+                    View.SYSTEM_UI_FLAG_IMMERSIVE_STICKY
         }
     }
 
