@@ -9,6 +9,7 @@
 - preferences reorder
 - changed library categories landscape behavior
 - added option to enable or disable adaptive colors
+- added immersive mode
 
 BUG FIXES
 - fixed notch
